Starting a new bakeday

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
-
 <!doctype html>
 <html lang="en">
 	<head>
+		<!-- 1023 sold out -->
 		<!-- Google Tag Manager -->
 		<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 		new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
@@ -484,7 +484,7 @@
 								"elementType": "labels.text",
 								"stylers": [
 									{
-										"visibility": "off"
+										"visibility": "on"
 									}
 								]
 							},
@@ -610,12 +610,12 @@
 		height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		<!-- End Google Tag Manager (noscript) -->	
 		<div class="banner-wrapper">
-			<a href="https://checkoutpage.co/c/sunday-bakeday/tote-bag"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-bag-fill" viewBox="0 0 16 16"><path d="M8 1a2.5 2.5 0 0 1 2.5 2.5V4h-5v-.5A2.5 2.5 0 0 1 8 1zm3.5 3v-.5a3.5 3.5 0 1 0-7 0V4H1v10a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V4h-3.5z"/></svg> click here to buy my cool merch!
+			<a href="https://checkoutpage.co/c/sunday-bakeday/tote-bag"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-bag-fill" viewBox="0 0 16 16"><path d="M8 1a2.5 2.5 0 0 1 2.5 2.5V4h-5v-.5A2.5 2.5 0 0 1 8 1zm3.5 3v-.5a3.5 3.5 0 1 0-7 0V4H1v10a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V4h-3.5z"></path></svg> click here to buy my cool merch!
 			</a>
 		</div>
 		<div class="top text-center">
 			<div class="px-2 pt-4 fade-in">
-				<a href="https://www.instagram.com/sunday.bakeday/"><img class="logo mx-auto" src="https://sundaybakeday.com/newlogoweb2.png" alt="Sunday Bakeday logo"></a>
+				<a href="https://www.instagram.com/sunday.bakeday/"><img class="logo d-block mx-auto" src="https://sundaybakeday.com/newlogoweb2.png" alt="Sunday Bakeday logo"></a>
 				<h1>sunday bakeday</h1>
 				<div class="col-lg-8 mx-auto">
 					<h2 class="lead mb-2 d-none d-sm-block">Fresh-baked pastries delivered on occasional Sunday mornings. Mix and match 4 for $20. <br>Grand Rapids, MI.</h2>
@@ -625,26 +625,50 @@
 		</div>
 		<div class="album text-center">
 			<div class="container">
-				<div class="row justify-content-center">			
-					<div class="col-12 col-md-10 pt-3">
+				<div class="row justify-content-center">
+					<h2 class="thisweeksmenu pink pb-2">menu for Sunday Feb 12</h2>
+					<div class="col-12 col-md-4">
 						<div class="card">
-							<div class="card-body fade-in">
-								<h2 class="thisweeksmenu"><span class="notThisWeek">no bakeday this week</span></h2>
-								<p class="card-text">Bakeday will be back very soon. Sign up below to be the first to know next time it's happening!</p>
-								<div id="mc_embed_signup">
-									<form action="https://sundaybakeday.us20.list-manage.com/subscribe/post?u=d8ad137324977f3a975bc2711&amp;id=b2be11a859&amp;f_id=00df4ee6f0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_self">
-										<div id="mc_embed_signup_scroll">									   
-											<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="email address" required>
-											<input type="number" name="PHONE" class="required email" value="" id="mce-PHONE" placeholder="phone number (optional)">
-											<div hidden="true"><input type="hidden" name="tags" value="3139784"></div>
-											<div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_d8ad137324977f3a975bc2711_b2be11a859" tabindex="-1" value=""></div>
-											<div class="clear"><input type="submit" value="sign up" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
-										</div>
-									</form>
-								</div>								
+							<div class="card-body fade-in menuItem">
+		    					<h4>#1 cardi b</h4>
+								<p class="card-text">A crunchy, flaky, croissant-dough spiral coated in cardamom sugar caramel. </p>
 							</div>
 						</div>
 					</div>
+					<div class="col-12 col-md-4">
+						<div class="card">
+							<div class="card-body fade-in menuItem">
+								<h4>#2 pain au chocolat</h4>
+								<p class="card-text">A big croissant-dough pillow filled with rich dark chocolate. </p>
+							</div>
+						</div>
+					</div>
+					<div class="col-12 col-md-4">
+						<div class="card">
+							<div class="card-body fade-in menuItem">
+								<h4>#3 blueberry scone</h4>
+								<p class="card-text">A bakeday classic. A light, fluffy scone packed full of fat organic bloobs with a crunchy sugar topping and a drizzle of lemon glaze.</p>
+							</div>
+						</div>
+					</div>					
+				</div>	
+				<div class="row justify-content-center">
+					<div class="col-12 col-md-4">
+						<div class="card">
+							<div class="card-body fade-in menuItem">
+								<h4>#4 jalapeno cheddar scone</h4>
+								<p class="card-text">If the blueberry scone is breakfast, this is lunch. Sharp cheddar, parmesan and just the right amount of jalapenos. Crispy cheese on top!</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-12 col-md-4">
+						<div class="card">
+							<div class="card-body fade-in menuItem">
+								<h4>#5 choco-no-nut cookie</h4>
+								<p class="card-text">I think these get bigger every time I make them. My favorite chocolate chip cookie. Chewy AND crispy! How is that even possible?</p>
+							</div>
+						</div>
+					</div>					
 				</div>
 			</div>			
 		</div>
@@ -751,16 +775,16 @@
 						</div>
 						<div class="col-6 col-md-2 col-lg-2 mb-4 insta-box">
                             <a href="https://www.instagram.com/p/CdZW8wzrY2e/">
-								<img src="https://i.imgur.com/nPxusMT.jpg" class="img-thumbnail" alt="Great content.">
+                                <img src="https://i.imgur.com/nPxusMT.jpg" class="img-thumbnail" alt="Great content.">
                                 <span class="overlay"><img src="https://gist.githubusercontent.com/sunday-bakeday/d6ccf666e5fc369d3ff3e474fbdc2fc4/raw/b5775f9f2f2ba8a953b2ae80822d2db1dca313f5/instagram.svg" alt="Sunday Bakeday on Instagram" width="64"></span>
                             </a>
-                       </div>
+                        </div>
 						<div class="col-6 col-md-2 col-lg-2 mb-4 insta-box">
-							<a href="https://www.instagram.com/p/Cd3Oe3OL-Z9/?utm_source=ig_web_copy_link">
-								<img src="https://i.imgur.com/vrq8SZF.jpg" class="img-thumbnail" alt="Great content.">
-								<span class="overlay"><img src="https://gist.githubusercontent.com/sunday-bakeday/d6ccf666e5fc369d3ff3e474fbdc2fc4/raw/b5775f9f2f2ba8a953b2ae80822d2db1dca313f5/instagram.svg" alt="Sunday Bakeday on Instagram" width="64"></span>
-							</a>
-						</div>
+                            <a href="https://www.instagram.com/p/Cd3Oe3OL-Z9/?utm_source=ig_web_copy_link">
+                                <img src="https://i.imgur.com/vrq8SZF.jpg" class="img-thumbnail" alt="Great content.">
+                                <span class="overlay"><img src="https://gist.githubusercontent.com/sunday-bakeday/d6ccf666e5fc369d3ff3e474fbdc2fc4/raw/b5775f9f2f2ba8a953b2ae80822d2db1dca313f5/instagram.svg" alt="Sunday Bakeday on Instagram" width="64"></span>
+                             </a>
+                        </div>
 						<div class="col-6 col-md-2 col-lg-2 mb-4 insta-box">
 							<a href="https://www.instagram.com/p/Cdlv1aXO-05/">
 								<img src="https://i.imgur.com/D0iqKLk.jpg" class="img-thumbnail" alt="Great content.">
@@ -783,4 +807,3 @@
 		
 	</body>
 </html>
-
