--- a/soldOut.html
+++ b/soldOut.html
@@ -403,6 +403,20 @@
 			font-size: 1.2rem;
 			background: #fed101;
 		}
+		.banner-wrapper {
+			font-size: 1.2rem;
+			background: blue;
+			text-align: center;
+			padding: 16px;
+			font-family: 'Fredoka One', sans-serif;
+		}
+		.banner-wrapper a {
+			text-decoration: none;
+		}
+		.banner-wrapper a:hover {
+			color: #FFF;
+			text-decoration: underline;
+		}
 		@media (min-width: 992px) {
 		    h1 {
 				font-size: 5rem;
@@ -595,6 +609,10 @@
 		<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KNGRG65"
 		height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		<!-- End Google Tag Manager (noscript) -->	
+		<div class="banner-wrapper">
+			<a href="https://checkoutpage.co/c/sunday-bakeday/tote-bag"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-bag-fill" viewBox="0 0 16 16"><path d="M8 1a2.5 2.5 0 0 1 2.5 2.5V4h-5v-.5A2.5 2.5 0 0 1 8 1zm3.5 3v-.5a3.5 3.5 0 1 0-7 0V4H1v10a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V4h-3.5z"></path></svg> click here to buy my cool merch!
+			</a>
+		</div>
 		<div class="top text-center">
 			<div class="px-2 pt-4 fade-in">
 				<a href="https://www.instagram.com/sunday.bakeday/"><img class="logo d-block mx-auto" src="https://sundaybakeday.com/newlogoweb2.png" alt="Sunday Bakeday logo"></a>
@@ -611,7 +629,7 @@
 					<div class="col-12 col-md-10 pt-3">
 						<div class="card">
 							<div class="card-body fade-in">
-								<h2 class="thisweeksmenu">menu for Sunday Jan 22: <span class="notThisWeek">sold out!</span></h2>
+								<h2 class="thisweeksmenu">menu for Sunday Feb 12: <span class="notThisWeek">sold out!</span></h2>
 								<p class="card-text">Aw man you missed it! Bakeday will be back very soon though. Sign up below to be the first to know next time it's happening!</p>
 								<div id="mc_embed_signup">
 									<form action="https://sundaybakeday.us20.list-manage.com/subscribe/post?u=d8ad137324977f3a975bc2711&amp;id=b2be11a859&amp;f_id=00df4ee6f0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_self">
