--- a/index.html
+++ b/index.html
@@ -630,7 +630,7 @@
 					<div class="col-12 col-md-4">
 						<div class="card">
 							<div class="card-body fade-in menuItem">
-		    					<h4>#1 cardi b</h4>
+		    					<h4>#1 cardamom bun</h4>
 								<p class="card-text">A crunchy, flaky, croissant-dough spiral coated in cardamom sugar caramel. <b>LIMIT 2 PER ORDER PLZ.</b></p>
 							</div>
 						</div>
