Starting a new bakeday

--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@
 								"elementType": "labels.text",
 								"stylers": [
 									{
-										"visibility": "off"
+										"visibility": "on"
 									}
 								]
 							},
@@ -625,26 +625,58 @@
 		</div>
 		<div class="album text-center">
 			<div class="container">
-				<div class="row justify-content-center">			
-					<div class="col-12 col-md-10 pt-3">
+				<div class="row justify-content-center">
+					<h2 class="thisweeksmenu pink pb-2">menu for Sunday Mar 12</h2>
+					<div class="col-12 col-md-4">
 						<div class="card">
-							<div class="card-body fade-in">
-								<h2 class="thisweeksmenu"><span class="notThisWeek">no bakeday this week!</span></h2>
-								<p class="card-text">I'm vibing this Sunday but bakeday will be back very soon! Sign up below to be the first to know next time it's happening!</p>
-								<div id="mc_embed_signup">
-									<form action="https://sundaybakeday.us20.list-manage.com/subscribe/post?u=d8ad137324977f3a975bc2711&amp;id=b2be11a859&amp;f_id=00df4ee6f0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_self">
-										<div id="mc_embed_signup_scroll">									   
-											<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="email address" required>
-											<input type="number" name="PHONE" class="required email" value="" id="mce-PHONE" placeholder="phone number (optional)">
-											<div hidden="true"><input type="hidden" name="tags" value="3139784"></div>
-											<div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_d8ad137324977f3a975bc2711_b2be11a859" tabindex="-1" value=""></div>
-											<div class="clear"><input type="submit" value="sign up" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
-										</div>
-									</form>
-								</div>								
+							<div class="card-body fade-in menuItem">
+		    					<h4>#1 pain au chocolat</h4>
+								<p class="card-text">A croissant pillow filled with rich dark chocolate. A French classic! </p>
 							</div>
 						</div>
 					</div>
+					<div class="col-12 col-md-4">
+						<div class="card">
+							<div class="card-body fade-in menuItem">
+								<h4>#2 spanakopita pain suisse</h4>
+								<p class="card-text">Spinach, feta, dill and some other good spanakopita stuff wrapped in flaky croissant pastry. </p>
+							</div>
+						</div>
+					</div>
+					<div class="col-12 col-md-4">
+						<div class="card">
+							<div class="card-body fade-in menuItem">
+								<h4>#3 blueberry lemon scone</h4>
+								<p class="card-text">A bakeday classic! A crumbly scone packed full of big fat bloobs with a lemon glaze.</p>
+							</div>
+						</div>
+					</div>					
+				</div>	
+				<div class="row justify-content-center">
+					<div class="col-12 col-md-4">
+						<div class="card">
+							<div class="card-body fade-in menuItem">
+								<h4>#4 jalapeno cheddar scone</h4>
+								<p class="card-text">A savory scone full of jalapeno chunks and THREE different types of cheese. I can't believe it either. </p>
+							</div>
+						</div>
+					</div>
+					<div class="col-12 col-md-4">
+						<div class="card">
+							<div class="card-body fade-in menuItem">
+								<h4>#5 apple cinnamon scone</h4>
+								<p class="card-text">The classic bakeday scone with chunks of apple, cinnamon chips, and a crunchy cinnamon sugar crust. Tastes like fall!</p>
+							</div>
+						</div>
+					</div>
+                                        <div class="col-12 col-md-4">
+                                                <div class="card">
+                                                        <div class="card-body fade-in menuItem">
+                                                                <h4>#6 choco-no-nut cookie</h4>
+                                                                <p class="card-text">A bakeday gang favorite! A huge, crispy, chewy, chocolate chip cookie the size of a toddler's face. </p>
+                                                        </div>
+                                                </div>
+                                        </div>					
 				</div>
 			</div>			
 		</div>
@@ -751,16 +783,16 @@
 						</div>
 						<div class="col-6 col-md-2 col-lg-2 mb-4 insta-box">
                             <a href="https://www.instagram.com/p/CdZW8wzrY2e/">
-								<img src="https://i.imgur.com/nPxusMT.jpg" class="img-thumbnail" alt="Great content.">
+                                <img src="https://i.imgur.com/nPxusMT.jpg" class="img-thumbnail" alt="Great content.">
                                 <span class="overlay"><img src="https://gist.githubusercontent.com/sunday-bakeday/d6ccf666e5fc369d3ff3e474fbdc2fc4/raw/b5775f9f2f2ba8a953b2ae80822d2db1dca313f5/instagram.svg" alt="Sunday Bakeday on Instagram" width="64"></span>
                             </a>
-                       </div>
+                        </div>
 						<div class="col-6 col-md-2 col-lg-2 mb-4 insta-box">
-							<a href="https://www.instagram.com/p/Cd3Oe3OL-Z9/?utm_source=ig_web_copy_link">
-								<img src="https://i.imgur.com/vrq8SZF.jpg" class="img-thumbnail" alt="Great content.">
-								<span class="overlay"><img src="https://gist.githubusercontent.com/sunday-bakeday/d6ccf666e5fc369d3ff3e474fbdc2fc4/raw/b5775f9f2f2ba8a953b2ae80822d2db1dca313f5/instagram.svg" alt="Sunday Bakeday on Instagram" width="64"></span>
-							</a>
-						</div>
+                            <a href="https://www.instagram.com/p/Cd3Oe3OL-Z9/?utm_source=ig_web_copy_link">
+                                <img src="https://i.imgur.com/vrq8SZF.jpg" class="img-thumbnail" alt="Great content.">
+                                <span class="overlay"><img src="https://gist.githubusercontent.com/sunday-bakeday/d6ccf666e5fc369d3ff3e474fbdc2fc4/raw/b5775f9f2f2ba8a953b2ae80822d2db1dca313f5/instagram.svg" alt="Sunday Bakeday on Instagram" width="64"></span>
+                             </a>
+                        </div>
 						<div class="col-6 col-md-2 col-lg-2 mb-4 insta-box">
 							<a href="https://www.instagram.com/p/Cdlv1aXO-05/">
 								<img src="https://i.imgur.com/D0iqKLk.jpg" class="img-thumbnail" alt="Great content.">
@@ -783,4 +815,3 @@
 		
 	</body>
 </html>
-
