Starting a new bakeday

--- a/index.html
+++ b/index.html
@@ -631,7 +631,7 @@
 						<div class="card">
 							<div class="card-body fade-in menuItem">
 		    					<h4>#1 pain au chocolat</h4>
-								<p class="card-text">A croissant pillow filled with rich dark chocolate. A French classic! </p>
+								<p class="card-text">A croissant pillow filled with rich dark chocolate. A French classic! <b>LIMIT 2 PER BOX PLZ.</b></p>
 							</div>
 						</div>
 					</div>
@@ -639,7 +639,7 @@
 						<div class="card">
 							<div class="card-body fade-in menuItem">
 								<h4>#2 spanakopita pain suisse</h4>
-								<p class="card-text">Spinach, feta, dill and some other good spanakopita stuff wrapped in flaky croissant pastry. </p>
+								<p class="card-text">Spinach, feta, dill and some other good spanakopita stuff wrapped in flaky croissant pastry. <b>LIMIT 2 PER BOX PLZ.</b></p>
 							</div>
 						</div>
 					</div>
