--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@
 								"elementType": "labels.text",
 								"stylers": [
 									{
-										"visibility": "on"
+										"visibility": "off"
 									}
 								]
 							},
@@ -625,59 +625,26 @@
 		</div>
 		<div class="album text-center">
 			<div class="container">
-				<div class="row justify-content-center">
-					<h2 class="thisweeksmenu pink pb-2">menu for Sunday Mar 19</h2>
-					<p style="color: #fc01f3; font-family: 'Fredoka One', sans-serif; font-size: 1.2rem;">This week 100% of your tips will go to the <a style="color: #fc01f3;" target="_blank" href="https://grwrc.org/">Grand Rapids Women's Resource Center</a>! And I'll give a bakeday tote bag to the biggest donor!</p>
-					<div class="col-12 col-md-4">
+				<div class="row justify-content-center">			
+					<div class="col-12 col-md-10 pt-3">
 						<div class="card">
-							<div class="card-body fade-in menuItem">
-		    					<h4>#1 pain au chocolat</h4>
-								<p class="card-text">A croissant pillow filled with rich dark chocolate.</p>
+							<div class="card-body fade-in">
+								<h2 class="thisweeksmenu">menu for Sunday Mar 19: <span class="notThisWeek">sold out!</span></h2>
+								<p class="card-text">Aw man you missed it! Bakeday will be back very soon though. Sign up below to be the first to know next time it's happening!</p>
+								<div id="mc_embed_signup">
+									<form action="https://sundaybakeday.us20.list-manage.com/subscribe/post?u=d8ad137324977f3a975bc2711&amp;id=b2be11a859&amp;f_id=00df4ee6f0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_self">
+										<div id="mc_embed_signup_scroll">									   
+											<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="email address" required>
+											<input type="number" name="PHONE" class="required email" value="" id="mce-PHONE" placeholder="phone number (optional)">
+											<div hidden="true"><input type="hidden" name="tags" value="3139784"></div>
+											<div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_d8ad137324977f3a975bc2711_b2be11a859" tabindex="-1" value=""></div>
+											<div class="clear"><input type="submit" value="sign up" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+										</div>
+									</form>
+								</div>								
 							</div>
 						</div>
 					</div>
-					<div class="col-12 col-md-4">
-						<div class="card">
-							<div class="card-body fade-in menuItem">
-								<h4>#2 cardi b</h4>
-								<p class="card-text"><b>NEW IMPROVED RECIPE</b> - You guys already loved this cardamom bun but I figured out how to improve it. A chew, caramel-y croissant spiral.</p>
-							</div>
-						</div>
-					</div>
-					<div class="col-12 col-md-4">
-						<div class="card">
-							<div class="card-body fade-in menuItem">
-								<h4>#3 blueberry lemon scone</h4>
-								<p class="card-text">A bakeday classic! A crumbly scone packed full of big fat bloobs with a crunchy sugar crust and a drizzle of lemon glaze. </p>
-							</div>
-						</div>
-					</div>					
-				</div>	
-				<div class="row justify-content-center">
-					<div class="col-12 col-md-4">
-						<div class="card">
-							<div class="card-body fade-in menuItem">
-								<h4>#4 jalapeno cheddar scone</h4>
-								<p class="card-text">Jalapenos and three kinds of cheese! Sometimes the cheese oozes out and gets crispy. What's not to like?</p>
-							</div>
-						</div>
-					</div>
-					<div class="col-12 col-md-4">
-						<div class="card">
-							<div class="card-body fade-in menuItem">
-								<h4>#5 apple cinnamon scone</h4>
-								<p class="card-text">Just because it's March doesn't mean that we can't enjoy all of the flavors of fall!</p>
-							</div>
-						</div>
-					</div>
-                                        <div class="col-12 col-md-4">
-                                                <div class="card">
-                                                        <div class="card-body fade-in menuItem">
-                                                                <h4>#6 choco-no-nut cookie</h4>
-                                                                <p class="card-text">Bakeday food scientists worked around the clock for years to develop this chocolate chip cookie that is somehow simultaneously chewy and crispy.</p>
-                                                        </div>
-                                                </div>
-                                        </div>					
 				</div>
 			</div>			
 		</div>
@@ -784,16 +751,16 @@
 						</div>
 						<div class="col-6 col-md-2 col-lg-2 mb-4 insta-box">
                             <a href="https://www.instagram.com/p/CdZW8wzrY2e/">
-                                <img src="https://i.imgur.com/nPxusMT.jpg" class="img-thumbnail" alt="Great content.">
+								<img src="https://i.imgur.com/nPxusMT.jpg" class="img-thumbnail" alt="Great content.">
                                 <span class="overlay"><img src="https://gist.githubusercontent.com/sunday-bakeday/d6ccf666e5fc369d3ff3e474fbdc2fc4/raw/b5775f9f2f2ba8a953b2ae80822d2db1dca313f5/instagram.svg" alt="Sunday Bakeday on Instagram" width="64"></span>
                             </a>
-                        </div>
+                       </div>
 						<div class="col-6 col-md-2 col-lg-2 mb-4 insta-box">
-                            <a href="https://www.instagram.com/p/Cd3Oe3OL-Z9/?utm_source=ig_web_copy_link">
-                                <img src="https://i.imgur.com/vrq8SZF.jpg" class="img-thumbnail" alt="Great content.">
-                                <span class="overlay"><img src="https://gist.githubusercontent.com/sunday-bakeday/d6ccf666e5fc369d3ff3e474fbdc2fc4/raw/b5775f9f2f2ba8a953b2ae80822d2db1dca313f5/instagram.svg" alt="Sunday Bakeday on Instagram" width="64"></span>
-                             </a>
-                        </div>
+							<a href="https://www.instagram.com/p/Cd3Oe3OL-Z9/?utm_source=ig_web_copy_link">
+								<img src="https://i.imgur.com/vrq8SZF.jpg" class="img-thumbnail" alt="Great content.">
+								<span class="overlay"><img src="https://gist.githubusercontent.com/sunday-bakeday/d6ccf666e5fc369d3ff3e474fbdc2fc4/raw/b5775f9f2f2ba8a953b2ae80822d2db1dca313f5/instagram.svg" alt="Sunday Bakeday on Instagram" width="64"></span>
+							</a>
+						</div>
 						<div class="col-6 col-md-2 col-lg-2 mb-4 insta-box">
 							<a href="https://www.instagram.com/p/Cdlv1aXO-05/">
 								<img src="https://i.imgur.com/D0iqKLk.jpg" class="img-thumbnail" alt="Great content.">
@@ -816,3 +783,4 @@
 		
 	</body>
 </html>
+
